# xrdcl-record

./: AUTHORS  CMakeLists.txt  README.md  xrootd-record.repo
cmake/: FindXrdCl.cmake
config/: recorder.conf
packaging/: makesrpm.sh
packaging/rhel/: xrdcl-record.spec.in
src/: CMakeLists.txt  XrdClRecord.cmake
src/XrdClRecordPlugin/: XrdClAction.hh  XrdClRecorder.hh  XrdClRecorderPlugin.cc
